# melties_clicker_picker

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
