[package]
name = "melties_clicker_picker"
version = "0.1.0"
edition = "2024"

[features]
default = ["circuit_playground_express/rtic", "circuit_playground_express/usb"]
use_semihosting = []

[dependencies]
cortex-m = "0.7"
circuit_playground_express = { path = "../atsamd/boards/circuit_playground_express", features = ["use_semihosting"] }
critical-section = "1.2.0"
debouncr = "0.2.2"
panic-halt = "1.0.0"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
rtic = { version = "2.1.1", features = ["thumbv6-backend"] }
rtic-monotonics = {version = "1.3.0", features = ["cortex-m-systick", "systick-10khz"]}
smart-leds = "0.3.0"
usb-device = "0.3.2"
usbd-serial = "0.2"
ws2812-timer-delay = { version = "0.3.0", features = ["slow"] }

[profile.release]
#opt-level = "s"
panic = 'abort'
